--- a/Individual.ipynb
+++ b/Individual.ipynb
@@ -72,7 +72,15 @@
     "- **sessions.csv** (1535 rows, 5 columns)  \n",
     "  - `hashedEmail`: player ID, matches players.csv.  \n",
     "  - `start_time`, `end_time` (character): session start/end (day/month/year hour:minute).  \n",
-    "  - `original_start_time`, `original_end_time` (numeric): timestamps (milliseconds since Unix epoch). "
+    "  - `original_start_time`, `original_end_time` (numeric): timestamps (milliseconds since Unix epoch).\n",
+    "\n",
+    "Main issues:\n",
+    "\n",
+    "- Many players have **no matching session rows**, so they appear to have never started a logged session.  \n",
+    "- `played_hours` is almost the sum of session durations, so it is highly collinear with total server time.  \n",
+    "- A few sessions have missing end times, so their durations are unknown.  \n",
+    "- Activity is extremely skewed (most players have 0–1 sessions, a few have hundreds), giving heavy tails and outliers.  \n",
+    "- Demographic variables are self-reported in a convenience sample, so bias is possible."
    ]
   },
   {
