--- a/Individual.ipynb
+++ b/Individual.ipynb
@@ -84,9 +84,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6febe4ac-4f1f-43d6-818f-cba07d49a7f1",
+   "metadata": {},
+   "source": [
+    "## 2. Questions\n",
+    "\n",
+    "- **Broad question (Q2):** Which kinds of players are most likely to generate large amounts of gameplay data on the server?  \n",
+    "- **Specific predictive question:** *Can basic player characteristics (age, gender, experience level, newsletter subscription) predict whether a player becomes a “high-activity” user who produces many sessions on the server?*\n",
+    "\n",
+    "I will define **HighActivity** = 1 if a player has at least 2 logged sessions (upper quartile), and 0 otherwise. Explanatory variables come from players.csv. sessions.csv is used only to count sessions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e192b4c-2093-46f1-80b4-169cc9f2be4f",
+   "id": "67fbcf45-4cd6-4945-bb84-198cbc10a6ba",
    "metadata": {},
    "outputs": [],
    "source": []
