wrangling and means
wrangled data and calculated means

--- a/Individual.ipynb
+++ b/Individual.ipynb
@@ -97,9 +97,427 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c04ec8cc-3e67-416c-87d1-5b95696b27bb",
+   "metadata": {},
+   "source": [
+    "## 3. Exploratory analysis plan\n",
+    "\n",
+    "I will:\n",
+    "\n",
+    "- Load both CSVs, join by `hashedEmail`, and compute per-player summaries: number of sessions and total minutes played.  \n",
+    "- Tidy to one row per player, replacing missing session counts with 0.  \n",
+    "- Compute means for quantitative variables in players.csv (`Age`, `played_hours`) and report them in a table.  \n",
+    "- Create plots: histogram of session counts; boxplots of session counts by experience and gender; scatterplot of age versus session count.  \n",
+    "- Use these to see which groups appear more active and to check skewness, outliers, and missingness."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "31dfb732-d233-4abf-ad85-5410f47bf005",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mRows: \u001b[22m\u001b[34m196\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m7\u001b[39m\n",
+      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
+      "\u001b[31mchr\u001b[39m (4): experience, hashedEmail, name, gender\n",
+      "\u001b[32mdbl\u001b[39m (2): played_hours, Age\n",
+      "\u001b[33mlgl\u001b[39m (1): subscribe\n",
+      "\n",
+      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
+      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n",
+      "\u001b[1mRows: \u001b[22m\u001b[34m1535\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m5\u001b[39m\n",
+      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
+      "\u001b[31mchr\u001b[39m (3): hashedEmail, start_time, end_time\n",
+      "\u001b[32mdbl\u001b[39m (2): original_start_time, original_end_time\n",
+      "\n",
+      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
+      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
+     ]
+    }
+   ],
+   "source": [
+    "players_url  <- \"https://raw.githubusercontent.com/Elijah-Lal/Individual-Project-Planning-Stage/refs/heads/main/players.csv\"\n",
+    "sessions_url <- \"https://raw.githubusercontent.com/Elijah-Lal/Individual-Project-Planning-Stage/refs/heads/main/sessions.csv\"\n",
+    "\n",
+    "download.file(players_url,  destfile = \"data/players.csv\", mode = \"wb\")\n",
+    "download.file(sessions_url, destfile = \"data/sessions.csv\", mode = \"wb\")\n",
+    "\n",
+    "players  <- read_csv(\"data/players.csv\")\n",
+    "sessions <- read_csv(\"data/sessions.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ec262e5-a8ee-4460-82b1-ee14bad73fe7",
+   "metadata": {},
+   "source": [
+    "Next, I create a per-player summary using the `sessions.csv` file. For each player, I count how many sessions they have. I then join this information back to the player-level data in `players.csv`. Players who never appear in `sessions.csv` are assumed to have 0 sessions.\n",
+    "\n",
+    "Using the session counts, I define a binary variable `HighActivity`, which equals `TRUE` if a player has at least 2 sessions, and `FALSE` otherwise. This variable represents whether a player contributes more than a minimal amount of gameplay data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a527a22e-94ed-48f6-9cfe-589bd1cff342",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 196\n",
+      "Columns: 9\n",
+      "$ experience   \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Pro\", \"Veteran\", \"Veteran\", \"Amateur\", \"Regular\", \"Amate…\n",
+      "$ subscribe    \u001b[3m\u001b[90m<lgl>\u001b[39m\u001b[23m TRUE, TRUE, FALSE, TRUE, TRUE, TRUE, TRUE, FALSE, TRUE, T…\n",
+      "$ hashedEmail  \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"f6daba428a5e19a3d47574858c13550499be23603422e6a0ee9728f8…\n",
+      "$ played_hours \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 30.3, 3.8, 0.0, 0.7, 0.1, 0.0, 0.0, 0.0, 0.1, 0.0, 1.6, 0…\n",
+      "$ name         \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Morgan\", \"Christian\", \"Blake\", \"Flora\", \"Kylie\", \"Adrian…\n",
+      "$ gender       \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Male\", \"Male\", \"Male\", \"Female\", \"Male\", \"Female\", \"Fema…\n",
+      "$ Age          \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 9, 17, 17, 21, 21, 17, 19, 21, 47, 22, 23, 17, 25, 22, 17…\n",
+      "$ n_sessions   \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 27, 3, 1, 1, 1, 0, 0, 1, 1, 0, 3, 0, 1, 1, 0, 0, 0, 37, 2…\n",
+      "$ HighActivity \u001b[3m\u001b[90m<lgl>\u001b[39m\u001b[23m TRUE, TRUE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FAL…\n"
+     ]
+    }
+   ],
+   "source": [
+    "per_player <- sessions |>\n",
+    "  group_by(hashedEmail) |>\n",
+    "  summarise(\n",
+    "    n_sessions = n(),\n",
+    "    .groups = \"drop\"\n",
+    "  )\n",
+    "\n",
+    "players_joined <- players |>\n",
+    "  left_join(per_player, by = \"hashedEmail\") |>\n",
+    "  mutate( n_sessions   = replace_na(n_sessions, 0),\n",
+    "         HighActivity = n_sessions >= 2)\n",
+    "\n",
+    "glimpse(players_joined)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8904463-dcb2-4d17-b674-c88621d86230",
+   "metadata": {},
+   "source": [
+    "For a more detailed measure of activity, we can also compute the total minutes played for each player using the numeric start and end timestamps in `sessions.csv`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2a5e2950-a7fc-4b9a-b584-a980b2ac9edf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 196\n",
+      "Columns: 10\n",
+      "$ experience    \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Pro\", \"Veteran\", \"Veteran\", \"Amateur\", \"Regular\", \"Amat…\n",
+      "$ subscribe     \u001b[3m\u001b[90m<lgl>\u001b[39m\u001b[23m TRUE, TRUE, FALSE, TRUE, TRUE, TRUE, TRUE, FALSE, TRUE, …\n",
+      "$ hashedEmail   \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"f6daba428a5e19a3d47574858c13550499be23603422e6a0ee9728f…\n",
+      "$ played_hours  \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 30.3, 3.8, 0.0, 0.7, 0.1, 0.0, 0.0, 0.0, 0.1, 0.0, 1.6, …\n",
+      "$ name          \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Morgan\", \"Christian\", \"Blake\", \"Flora\", \"Kylie\", \"Adria…\n",
+      "$ gender        \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Male\", \"Male\", \"Male\", \"Female\", \"Male\", \"Female\", \"Fem…\n",
+      "$ Age           \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 9, 17, 17, 21, 21, 17, 19, 21, 47, 22, 23, 17, 25, 22, 1…\n",
+      "$ n_sessions    \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m 27, 3, 1, 1, 1, 0, 0, 1, 1, 0, 3, 0, 1, 1, 0, 0, 0, 37, …\n",
+      "$ total_minutes \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2000.0000, 166.6667, 0.0000, 0.0000, 0.0000, 0.0000, 0.0…\n",
+      "$ HighActivity  \u001b[3m\u001b[90m<lgl>\u001b[39m\u001b[23m TRUE, TRUE, FALSE, FALSE, FALSE, FALSE, FALSE, FALSE, FA…\n"
+     ]
+    }
+   ],
+   "source": [
+    "sessions_with_duration <- sessions |>\n",
+    "  mutate(\n",
+    "    duration_min = (original_end_time - original_start_time) / 1000 / 60\n",
+    "  )\n",
+    "\n",
+    "# Summarising both session counts and total minutes per player\n",
+    "per_player_detailed <- sessions_with_duration |>\n",
+    "  group_by(hashedEmail) |>\n",
+    "  summarise(\n",
+    "    n_sessions    = n(),\n",
+    "    total_minutes = sum(duration_min, na.rm = TRUE),\n",
+    "    .groups = \"drop\"\n",
+    "  )\n",
+    "\n",
+    "# Joining back to players data and handle missing values\n",
+    "players_joined <- players |>\n",
+    "  left_join(per_player_detailed, by = \"hashedEmail\") |>\n",
+    "  mutate(\n",
+    "    n_sessions    = replace_na(n_sessions, 0),\n",
+    "    total_minutes = replace_na(total_minutes, 0),\n",
+    "    HighActivity  = n_sessions >= 2\n",
+    "  )\n",
+    "\n",
+    "glimpse(players_joined)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94c45191-4ab9-4029-873d-83360d829566",
+   "metadata": {},
+   "source": [
+    "I am now summarising the structure of the joined player dataset and examining the distributions of key categorical variables. Then, I compute the mean of each numeric variable in `players.csv` (such as `Age` and `played_hours`), rounding the results to two decimal places as required."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "49d12212-0fbd-44d6-8e03-b9a1f93edfe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 5 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>experience</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Amateur </td><td>63</td></tr>\n",
+       "\t<tr><td>Beginner</td><td>35</td></tr>\n",
+       "\t<tr><td>Pro     </td><td>14</td></tr>\n",
+       "\t<tr><td>Regular </td><td>36</td></tr>\n",
+       "\t<tr><td>Veteran </td><td>48</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 5 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " experience & n\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Amateur  & 63\\\\\n",
+       "\t Beginner & 35\\\\\n",
+       "\t Pro      & 14\\\\\n",
+       "\t Regular  & 36\\\\\n",
+       "\t Veteran  & 48\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 5 × 2\n",
+       "\n",
+       "| experience &lt;chr&gt; | n &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| Amateur  | 63 |\n",
+       "| Beginner | 35 |\n",
+       "| Pro      | 14 |\n",
+       "| Regular  | 36 |\n",
+       "| Veteran  | 48 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  experience n \n",
+       "1 Amateur    63\n",
+       "2 Beginner   35\n",
+       "3 Pro        14\n",
+       "4 Regular    36\n",
+       "5 Veteran    48"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 7 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>gender</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Agender          </td><td>  2</td></tr>\n",
+       "\t<tr><td>Female           </td><td> 37</td></tr>\n",
+       "\t<tr><td>Male             </td><td>124</td></tr>\n",
+       "\t<tr><td>Non-binary       </td><td> 15</td></tr>\n",
+       "\t<tr><td>Other            </td><td>  1</td></tr>\n",
+       "\t<tr><td>Prefer not to say</td><td> 11</td></tr>\n",
+       "\t<tr><td>Two-Spirited     </td><td>  6</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 7 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " gender & n\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Agender           &   2\\\\\n",
+       "\t Female            &  37\\\\\n",
+       "\t Male              & 124\\\\\n",
+       "\t Non-binary        &  15\\\\\n",
+       "\t Other             &   1\\\\\n",
+       "\t Prefer not to say &  11\\\\\n",
+       "\t Two-Spirited      &   6\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 7 × 2\n",
+       "\n",
+       "| gender &lt;chr&gt; | n &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| Agender           |   2 |\n",
+       "| Female            |  37 |\n",
+       "| Male              | 124 |\n",
+       "| Non-binary        |  15 |\n",
+       "| Other             |   1 |\n",
+       "| Prefer not to say |  11 |\n",
+       "| Two-Spirited      |   6 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  gender            n  \n",
+       "1 Agender             2\n",
+       "2 Female             37\n",
+       "3 Male              124\n",
+       "4 Non-binary         15\n",
+       "5 Other               1\n",
+       "6 Prefer not to say  11\n",
+       "7 Two-Spirited        6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 2 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>subscribe</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>FALSE</td><td> 52</td></tr>\n",
+       "\t<tr><td> TRUE</td><td>144</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 2 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " subscribe & n\\\\\n",
+       " <lgl> & <int>\\\\\n",
+       "\\hline\n",
+       "\t FALSE &  52\\\\\n",
+       "\t  TRUE & 144\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 2 × 2\n",
+       "\n",
+       "| subscribe &lt;lgl&gt; | n &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| FALSE |  52 |\n",
+       "|  TRUE | 144 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  subscribe n  \n",
+       "1 FALSE      52\n",
+       "2  TRUE     144"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 2 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>variable</th><th scope=col>mean</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>played_hours</td><td> 5.85</td></tr>\n",
+       "\t<tr><td>Age         </td><td>21.14</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 2 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " variable & mean\\\\\n",
+       " <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t played\\_hours &  5.85\\\\\n",
+       "\t Age          & 21.14\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 2 × 2\n",
+       "\n",
+       "| variable &lt;chr&gt; | mean &lt;dbl&gt; |\n",
+       "|---|---|\n",
+       "| played_hours |  5.85 |\n",
+       "| Age          | 21.14 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  variable     mean \n",
+       "1 played_hours  5.85\n",
+       "2 Age          21.14"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Basic information on rows and columns\n",
+    "nrow(players_joined)\n",
+    "ncol(players_joined)\n",
+    "\n",
+    "# Categorical summaries for experience, gender, and subscription status\n",
+    "players_joined |>\n",
+    "  count(experience)\n",
+    "\n",
+    "players_joined |>\n",
+    "  count(gender)\n",
+    "\n",
+    "players_joined |>\n",
+    "  count(subscribe)\n",
+    "\n",
+    "# Mean of each numeric variable in players.csv\n",
+    "players_means <- players |>\n",
+    "  summarise(across(where(is.numeric), ~ mean(.x, na.rm = TRUE))) |>\n",
+    "  pivot_longer(\n",
+    "    everything(),\n",
+    "    names_to = \"variable\",\n",
+    "    values_to = \"mean\"\n",
+    "  ) |>\n",
+    "  mutate(mean = round(mean, 2))\n",
+    "\n",
+    "players_means"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67fbcf45-4cd6-4945-bb84-198cbc10a6ba",
+   "id": "17d8616f-332a-4d9f-99f0-3a6131d265b7",
    "metadata": {},
    "outputs": [],
    "source": []
